# 2025-Interval-Analysis

./: .gitignore
lab1/: CMakeLists.txt  main.cpp  main.h  tech.h  test_intervals.cpp  test_intervals.h
lab1/equations/: equation solving.h
lab1/interval/: interval.h
lab1/matlab/: plots.m
lab1/report/: description.md  ot1.tex
lab1/secondary/: matrix creating.h  tech.h
lab1/secondary/amatrix/: amatrix.cpp  amatrix.h
lab1/secondary/avector/: avector.cpp  avector.h
lab1/task/: task.h
lab1/test/: test.h  test_intervals.h
lab2/matlab/: plots.m
lab2/report/: ot2.tex
lab2/src/: CMakeLists.txt  main.cpp  tech.h
lab3/: .gitignore  CMakeLists.txt
lab3/matlab/: plots.m
lab3/report/: ot3.tex
lab3/src/: CMakeLists.txt  logger.h  main.cpp  names.h  tech.h
lab3/src/calc/: calc.cpp  calc.h
lab3/src/interval/: interval.h
lab3/src/secondary/: flogger.h  logger.h  vector_tech.h
lab3/src/secondary/avector/: avector.cpp  avector.h
lab3/src/secondary/equations/: equation solving.h
lab3/src/secondary/interval/: interval.h
lab3/src/secondary/tech/: dgrid.h  dgridresult.h  evaluate_grid.h
lab3/src/task/: task.h  task_values.h
lab3/src/test/: test.h  test_intervals.h
lab4/: CMakeLists.txt
lab4/matlab/: plots.m
lab4/report/: main.tex
lab4/src/: main.cpp  main.h
lab5/: .gitignore  CMakeLists.txt
lab5/matlab/: plots.m  plots2.m
lab5/report/: ot5.tex
lab5/src/: main.cpp  main.h  names.h
lab5/src/calc/: calc.cpp  calc.h  method.h
lab5/src/secondary/: flogger.h  logger.h
lab5/src/secondary/avector/: avector.cpp
lab5/src/secondary/tech/: dgrid.h  dgridresult.h  evaluate_grid.cpp  evaluate_grid.h  point.h  print_all.h
lab5/src/task/: preprocess.h  task.h  taskFuncs.h  taskValues.h
lab5/src/test/: test.h
(+19 files in other folders)
